--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
 </head>
 <body>
     <div class="calculadora">
+        <div class="theme-switch-wrapper">
+            <label class="theme-switch" for="checkbox">
+                <input type="checkbox" id="checkbox" />
+                <div class="slider round"></div>
+            </label>
+        </div>
         <div class="screen">
             <h4 id="title"></h4>
             <h1 id="screen"></h1>
         </div>
+        
         <div class="btns">
             <div class="numeros">
 
@@ -101,6 +108,16 @@
     document.getElementById("clear").addEventListener("click", function () {
         salida.textContent = "0";
         sub_salida.textContent = "";
+    });
+
+    document.getElementById("checkbox").addEventListener("change", function () {
+        document.body.classList.toggle("light-mode");   
+        const themeText = document.getElementById("theme-text");
+        if (document.body.classList.contains("light-mode")) {   
+            themeText.textContent = "Light Mode";
+        } else {
+            themeText.textContent = "Dark Mode";
+        }   
     });
         </script>
     </div>
